bootstrap/argo-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: ArgoCD
    hajimari.io/group: Tools
    hajimari.io/icon: mdi:ship-wheel
    hajimari.io/info: GitOps Deployment Dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.entropymaker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
        - "argocd.entropymaker.com"
      secretName: entropymaker-com-tls
